# shape-engine-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_CN.md
shape_engine/: CMakeLists.txt  common.h  graph.h  shape_engine.h
simple_cuda_engine/: CMakeLists.txt  cuda_engine.cpp  cuda_engine.h  kernel.cu  kernel.h  kernel_func.cuh  run_model.cpp  types.h
simple_inference_engine/: CMakeLists.txt  run_model.cpp  simple_inference_engine.cpp  simple_inference_engine.h
simple_sycl_engine/: CMakeLists.txt  gemm_perf.cpp  run_model.cpp  sycl_engine.cpp  sycl_engine.h
x64_inference_engine/: CMakeLists.txt  jblas_common.hpp  jblas_gemm.cpp  jblas_gemm.h  run_model.cpp  x64_inference_engine.cpp  x64_inference_engine.h
