cmake_minimum_required(VERSION 3.23)
project(sycl_engine)
file(GLOB SRCS "*.cpp")
file(GLOB HEAS "*.h")
file(GLOB SYCL_SRCS "kernel/*.cpp")
option(WITH_DNNL "use onednn" OFF)
option(WITH_MKL "use onemkl" OFF)
find_package(IntelSYCL REQUIRED)
message("SYCL_PACKAGE_DIR ${SYCL_PACKAGE_DIR}")
message("SYCL_BIN_DIR ${SYCL_BIN_DIR}")
message("SYCL_INCLUDE_DIR ${SYCL_INCLUDE_DIR}")
include_directories(${SYCL_INCLUDE_DIR}/sycl)
set(link_libs shape_engine::shape_engine IntelSYCL::SYCL_CXX)
if(WITH_DNNL)
set(DNNL_WITH_SYCL true)
find_package(dnnl 3.1.0 CONFIG REQUIRED HINTS ${DNNLROOT} ${ONEAPI_CMAKE_CONFIG_HINT})
append(link_libs DNNL::dnnl)
add_compile_definitions(-DWITH_DNNL)
endif()
if(WITH_MKL)
find_package(MKL CONFIG REQUIRED HINTS ${DNNLROOT} ${ONEAPI_CMAKE_CONFIG_HINT})
append(link_libs MKL::MKL_DPCPP)
add_compile_definitions(-DWITH_MKL)
endif()
add_executable(${PROJECT_NAME} ${SRCS} ${HEAS})
target_link_libraries(${PROJECT_NAME}  ${link_libs})
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
#add_sycl_to_target(TARGET ${PROJECT_NAME} SOURCES ${SRCS})
